Aligned social media banner using grids and solve social media code redundancy

--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -1,18 +1,6 @@
 .social {
-    position: absolute;
-    bottom: 2.5rem;
-    padding-left: 1rem;
+    padding: 2.5rem 0;
     width: 100%;
-
-    @include respond(tab-portrait) {
-        padding: 0;
-        bottom: 5rem;
-    }
-
-    @include respond(tab-portrait-s) {
-        position: static;
-        margin-top: 2.5rem;
-    }
 
     &__container {
         height: 4.8rem;
