--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -11,13 +11,24 @@
 
     &__content-box-large {
         height: 100vh;
+        grid-template-rows: 1fr min-content;
 
         &--left {
             grid-column: col-start 1 / col-end 7;
+            grid-row: 1 / 3;
+            // background-color: grey;
         }
 
         &--right {
             grid-column: col-start 8 / -1;
+            grid-row: 1 / 3;
+            // background-color: green;
+        }
+
+        .social {
+            grid-row: 2 / 3;
+            grid-column: col-start 1 / col-end 12;
+            // background-color: red;
         }
 
         @include respond(tab-portrait) {
